Fix scrollbar in StationExplore

--- a/src/assets/styles/pages/_StationExplore.scss
+++ b/src/assets/styles/pages/_StationExplore.scss
@@ -4,7 +4,4 @@
 
   padding-inline: 24px;
   padding-block-start: em(67px);
-
-  overflow-y: scroll;
-  height: 100vh;
 }
